💄 Add "overflow:hidden" to body tag for prevent scroll

--- a/styles/base/_reset.scss
+++ b/styles/base/_reset.scss
@@ -13,6 +13,9 @@ html {
 }
 
 body {
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
   font-family: 'inter-tight-variable', 'Noto Sans KR', sans-serif;
 }
 
